@@ -27,7 +27,7 @@
         <revision>1.0</revision>
         <sha1/>
         <changelist>-SNAPSHOT</changelist>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -144,7 +144,7 @@
             <dependency>
                 <groupId>net.bytebuddy</groupId>
                 <artifactId>byte-buddy</artifactId>
-                <version>1.10.22</version>
+                <version>1.11.0</version>
             </dependency>
             <!-- moduler i dette prosjektet -->
             <dependency>
@@ -431,7 +431,7 @@
             <dependency>
                 <groupId>com.fasterxml.woodstox</groupId>
                 <artifactId>woodstox-core</artifactId>
-                <version>6.2.5</version>
+                <version>6.2.6</version>
             </dependency>
 
             <!-- NAV -->
@@ -463,7 +463,7 @@
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>io.javaslang</groupId>
@@ -732,7 +732,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.4.1</version>
+                    <version>3.0.0-M3</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -821,10 +821,10 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>[11,)</version>
+                                    <version>[16,)</version>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
-                                    <version>[3.5.3,)</version>
+                                    <version>[3.6.1,)</version>
                                 </requireMavenVersion>
                                 <dependencyConvergence/>
                                 <requireSameVersions>
@@ -923,7 +923,7 @@
                         <configuration>
                             <useFile>true</useFile>
                             <argLine>-XX:+TieredCompilation -XX:TieredStopAtLevel=1 -Xms256m -Dfile.encoding=UTF-8
-                                -Dlog.level.no.nav=WARN
+                                -Dlog.level.no.nav=WARN --illegal-access=warn
                             </argLine>
                         </configuration>
                     </plugin>
